k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudfritz
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudfritz
    spec:
      containers:
      - name: cloudfritz
        image: yoyostile/cloudfritz:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 4567
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 4567
          initialDelaySeconds: 20
          periodSeconds: 10
      dnsConfig:
        options:
          - name: ndots
            value: "1"
