k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudfritz
  labels:
    app: cloudfritz
spec:
  type: ClusterIP
  ports:
    - port: 4567
      targetPort: 4567
      protocol: TCP
      name: http
  selector:
    app: cloudfritz
