k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudfritz-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    external-dns.alpha.kubernetes.io/target: "dns.r4r3.me"
spec:
  tls:
  - secretName: cloudfritz-tls
    hosts:
    - cloudfritz.r4r3.me
  rules:
  - host: cloudfritz.r4r3.me
    http:
      paths:
      - path: /
        backend:
          serviceName: cloudfritz
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudfritz-ingress-internal
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/target: "k8s-master.lan.r4r3.me"
spec:
  rules:
  - host: cloudfritz.lan.r4r3.me
    http:
      paths:
      - backend:
          serviceName: cloudfritz
          servicePort: http
